--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -6,58 +6,81 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".SignupActivity">
 
     <TextView
         style="@style/text_30"
         android:layout_marginTop="80dp"
-        android:text="Login Here"
+        android:text="Create Account"
         android:textColor="#1E40BA"
         />
 
     <TextView
         style="@style/text_30"
-        android:text="Welcome Back you've \nbeen Missed!"
+        android:text="Create Account so you can explore all existing Jobs"
         android:layout_marginTop="30dp"
         android:layout_marginBottom="50dp"
+        android:textSize="20dp"
+        />
+
+
+    <EditText
+        android:id="@+id/signup_name"
+        style="@style/edit_18"
+        android:hint="Name"
         />
 
     <EditText
-        android:id="@+id/main_email"
+        android:id="@+id/signup_email"
         style="@style/edit_18"
         android:hint="Email"
+        android:layout_marginTop="10dp"
         android:inputType="textEmailAddress"
         />
 
     <EditText
-        android:id="@+id/main_password"
+        android:id="@+id/signup_contact"
+        style="@style/edit_18"
+        android:hint="Contact"
+        android:layout_marginTop="10dp"
+        android:inputType="phone"
+        android:maxLength="10"
+        />
+
+
+
+
+    <EditText
+        android:id="@+id/signup_password"
         style="@style/edit_18"
         android:layout_marginTop="10dp"
         android:hint="Password"
         android:inputType="textPassword"
         />
 
-    <TextView
-        style="@style/text_18"
-        android:text="Forget Your Password?"
-        android:layout_marginTop="30dp"
-        android:gravity="right"
-        android:textColor="#1E40BA"
+    <EditText
+        android:id="@+id/signup_cnfpassword"
+        style="@style/edit_18"
+        android:layout_marginTop="10dp"
+        android:hint="Confirm Password"
+        android:inputType="textPassword"
         />
 
+
+
     <TextView
-        android:id="@+id/main_create_account"
+        android:id="@+id/signup_already_account"
         style="@style/text_18"
-        android:text="Create New Account"
+        android:text="Already Have An Account?"
         android:layout_marginTop="30dp"
         android:gravity="center"
         />
 
     <Button
-        android:id="@+id/main_signin"
+        android:id="@+id/signup_button"
         style="@style/button_20"
         app:backgroundTint="@null"
         android:layout_marginTop="30dp"
-        android:text="Sign In"
+        android:text="Sign Up"
         />
 </LinearLayout>
