Forget Password, SplashScreen, App Icon

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -8,56 +8,67 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
-        style="@style/text_30"
-        android:layout_marginTop="80dp"
-        android:text="Login Here"
-        android:textColor="#1E40BA"
-        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <TextView
-        style="@style/text_30"
-        android:text="Welcome Back you've \nbeen Missed!"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="50dp"
-        />
+        <TextView
+            style="@style/text_30"
+            android:layout_marginTop="@dimen/_80sdp"
+            android:text="Login Here"
+            android:textColor="#1E40BA"
+            />
 
-    <EditText
-        android:id="@+id/main_email"
-        style="@style/edit_18"
-        android:hint="Email"
-        android:inputType="textEmailAddress"
-        />
+        <TextView
+            style="@style/text_30"
+            android:text="Welcome Back you've \nbeen Missed!"
+            android:layout_marginTop="@dimen/_30sdp"
+            android:layout_marginBottom="@dimen/_50sdp"
+            />
 
-    <EditText
-        android:id="@+id/main_password"
-        style="@style/edit_18"
-        android:layout_marginTop="10dp"
-        android:hint="Password"
-        android:inputType="textPassword"
-        />
+        <EditText
+            android:id="@+id/main_email"
+            style="@style/edit_18"
+            android:hint="Email"
+            android:inputType="textEmailAddress"
+            />
 
-    <TextView
-        style="@style/text_18"
-        android:text="Forget Your Password?"
-        android:layout_marginTop="30dp"
-        android:gravity="right"
-        android:textColor="#1E40BA"
-        />
+        <EditText
+            android:id="@+id/main_password"
+            style="@style/edit_18"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:hint="Password"
+            android:inputType="textPassword"
+            />
 
-    <TextView
-        android:id="@+id/main_create_account"
-        style="@style/text_18"
-        android:text="Create New Account"
-        android:layout_marginTop="30dp"
-        android:gravity="center"
-        />
+        <TextView
+            android:id="@+id/forget_password"
+            style="@style/text_18"
+            android:text="Forget Your Password?"
+            android:layout_marginTop="@dimen/_30sdp"
+            android:gravity="right"
+            android:textColor="#1E40BA"
+            />
 
-    <Button
-        android:id="@+id/main_signin"
-        style="@style/button_20"
-        app:backgroundTint="@null"
-        android:layout_marginTop="30dp"
-        android:text="Sign In"
-        />
-</LinearLayout>
+        <TextView
+            android:id="@+id/main_create_account"
+            style="@style/text_18"
+            android:text="Create New Account"
+            android:layout_marginTop="@dimen/_30sdp"
+            android:gravity="center"
+            />
+
+        <Button
+            android:id="@+id/main_signin"
+            style="@style/button_20"
+            app:backgroundTint="@null"
+            android:layout_marginTop="@dimen/_30sdp"
+            android:text="Sign In"
+            android:layout_marginBottom="@dimen/_30sdp"
+            />
+
+    </LinearLayout>
+
+
+</ScrollView>
