--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,16 +12,16 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">center</item>
-        <item name="android:textSize">30dp</item>
+        <item name="android:textSize">@dimen/_30sdp</item>
         <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="edit_18" parent="Widget.AppCompat.EditText">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:padding">10dp</item>
-        <item name="android:textSize">18dp</item>
-        <item name="android:layout_marginHorizontal">20dp</item>
+        <item name="android:padding">@dimen/_10sdp</item>
+        <item name="android:textSize">@dimen/_18sdp</item>
+        <item name="android:layout_marginHorizontal">@dimen/_20sdp</item>
         <item name="android:background">@drawable/custom_background</item>
         <item name="android:textColorHint">@color/black</item>
     </style>
@@ -29,16 +29,16 @@
     <style name="text_18" parent="Widget.AppCompat.TextView">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">18dp</item>
+        <item name="android:textSize">@dimen/_18sdp</item>
         <item name="android:textColor">@color/black</item>
-        <item name="android:layout_marginHorizontal">20dp</item>
+        <item name="android:layout_marginHorizontal">@dimen/_20sdp</item>
     </style>
 
     <style name="button_20" parent="Widget.AppCompat.Button">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">20dp</item>
-        <item name="android:layout_marginHorizontal">20dp</item>
+        <item name="android:textSize">@dimen/_20sdp</item>
+        <item name="android:layout_marginHorizontal">@dimen/_20sdp</item>
         <item name="android:background">@drawable/custom_button</item>
         <item name="android:textColor">@color/white</item>
     </style>
