SQLite Logout and dashboard

--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -10,7 +10,7 @@
 
     <TextView
         style="@style/text_30"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="@dimen/_80sdp"
         android:text="Change Password"
         android:textColor="#1E40BA"
         />
