--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -5,10 +5,32 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:fitsSystemWindows="true"
+
     tools:context=".DashboardActivity">
+
     <TextView
+        android:id="@+id/dashboard_name"
         style="@style/text_30"
         android:text="Welcome user"
+        />
+
+    <Button
+        android:id="@+id/dashboard_logout"
+        style="@style/button_20"
+        android:layout_marginTop="@dimen/_40sdp"
+        android:text="Logout"
+        app:backgroundTint="@null"
+        />
+
+
+    <Button
+        android:id="@+id/dashboard_delete"
+        style="@style/button_20"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:text="Delete Profile"
+        app:backgroundTint="@null"
         />
 
 </LinearLayout>
