--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -33,4 +33,12 @@
         app:backgroundTint="@null"
         />
 
+    <Button
+        android:id="@+id/dashboard_profile"
+        style="@style/button_20"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:text="Profile"
+        app:backgroundTint="@null"
+        />
+
 </LinearLayout>
